icicle-compiler/test/cli/repl/t20-lexer/expected
Queries will no longer be evaluated using the C evaluator.
Snapshot mode activated with a snapshot date of 2017-01-01.
Loaded dictionary with 5 inputs, 0 outputs, 74 functions.
Selected psv file as input: test/cli/repl/data.psv

  ██▓ ▄████▄   ██▓ ▄████▄   ██▓    ▓█████
 ▓██▒▒██▀ ▀█  ▓██▒▒██▀ ▀█  ▓██▒    ▓█   ▀
 ▒██▒▒▓█    ▄ ▒██▒▒▓█    ▄ ▒██░    ▒███
 ░██░▒▓▓▄ ▄██▒░██░▒▓▓▄ ▄██▒▒██░    ▒▓█  ▄
 ░██░▒ ▓███▀ ░░██░▒ ▓███▀ ░░██████▒░▒████▒
 ░▓  ░ ░▒ ▒  ░░▓  ░ ░▒ ▒  ░░ ▒░▓  ░░░ ▒░ ░
  ▒ ░  ░  ▒    ▒ ░  ░  ▒   ░ ░ ▒  ░ ░ ░  ░
  ▒ ░░         ▒ ░░          ░ ░ REPL ░
  ░  ░ ░       ░  ░ ░          ░  ░   ░  ░
     ░            ░
                  ░     :help for help

λ -- Numbers
λ Core evaluation
---------------

homer|( ( ( ((5, 1), 2.21)
          , 3000.0 )
        , 4.44e-4 )
      , 0.555 )
marge|( ( ( ((3, 1), 2.21)
          , 3000.0 )
        , 4.44e-4 )
      , 0.555 )

λ λ -- Strings
λ Core evaluation
---------------

homer|( ( (((5, ""), " "), "ok")
        , "\"hello\"" )
      , "\tok\t" )
marge|( ( (((3, ""), " "), "ok")
        , "\"hello\"" )
      , "\tok\t" )

λ λ -- Expect a "no such variable" error rather than invalid token or parse error
λ                   ^
Error
-----

## Check error

  Unknown variable ea1 at 1:17
  
  Suggested bindings are:
  
    exp :
         Double
      -> Possibly Double
    
    tan : Double -> Possibly Double
    
    max :
         Element a
      -> Aggregate (Possibly a)
    
    mean :
         Num a
      => Element a
      -> Aggregate (Possibly Double)
    
    box : Sum ErrorT a -> Possibly a

λ λ -- Expect a parse error on unterminated string
λ Error
-----

## Parse error

  2:1:
    |
  2 | <empty line>
    | ^
  unexpected end of input
  expecting '"'
  

λ λ 